@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="line">
+    <solid
+        android:color="#00000000" />
+    <stroke
+        android:width="1dp"
+        android:color="#FF000000"
+       />
+</shape>
